# yolo26_plate_recognition_tensorrt

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: common.hpp
plate_recognition/: CMakeLists.txt
plate_recognition/include/: plate_recognition.h
plate_recognition/src/: main.cpp  plate_recognition.cpp
plate_recognition/weights/: plate_rec_color.engine  plate_rec_color.onnx
yolov26_pose/: CMakeLists.txt
yolov26_pose/include/: postprocess.h  preprocess.h  yolov26_pose.h
yolov26_pose/src/: main.cpp  postprocess.cu  preprocess.cu  yolov26_pose.cpp
